--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,15 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.4'
     implementation 'org.liquibase:liquibase-core:4.27.0'
+    implementation('org.springframework.boot:spring-boot-starter-security:3.2.4') {
+        exclude group: 'org.springframework.security', module: 'spring-security-core'
+    }
+    implementation 'org.springframework.security:spring-security-core:6.2.3'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.1'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
