--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8888
 spring.datasource.url=jdbc:postgresql://localhost:5432/matrix_157
 spring.datasource.username=postgres
 spring.datasource.password=
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.liquibase.change-log=liquibase/changelog-master.yaml
+#spring.security.user.name=elnur
+#spring.security.user.password=12345
